--- a/Neural_Network_Fundamentals.ipynb
+++ b/Neural_Network_Fundamentals.ipynb
@@ -224,9 +224,10 @@
     "\n",
     "            # Update weights and bias based on prediction errors\n",
     "            errors = y - predictions\n",
-    "           
+    "            # *****BEGINNING OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "            self.weights += self.learning_rate * (X.T @ errors)\n",
     "            self.bias += self.learning_rate * errors.sum()\n",
+    "            # *****END OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "\n",
     "            \n",
     "            miss_class.append((errors!=0).sum())\n",
@@ -242,8 +243,10 @@
     "            Class label of X\n",
     "        \"\"\"\n",
     "        \n",
+    "        # *****BEGINNING OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "        z = (X @ self.weights) + self.bias\n",
     "        return np.where(z >= 0, 1, 0)\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "       \n",
     "\n",
     "\n"
@@ -433,15 +436,19 @@
     "    \"\"\"\n",
     "    Compute the output of the Sigmoid activation function.\n",
     "    \"\"\"\n",
+    "    # *****BEGINNING OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "    return 1/(1 + np.exp(-x))\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "\n",
     "\n",
     "def sigmoid_derivative(x):\n",
     "    \"\"\"\n",
     "    Compute the derivative of the sigmoid activation function.\n",
     "    \"\"\"\n",
+    "    # *****BEGINNING OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "    f = sigmoid(x)\n",
     "    return x * (1 - x)\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE THIS LINE)*****"
    ],
    "outputs": [],
    "execution_count": 5
@@ -612,7 +619,8 @@
     "            tmp_y = out_y = 0\n",
     "            while tmp_y + self.size <= input_dimension:\n",
     "                tmp_x = out_x = 0\n",
-    "                while tmp_x + self.size <= input_dimension:\n",            
+    "                while tmp_x + self.size <= input_dimension:\n",
+    "                    # *****BEGINNING OF YOUR CODE (DO NOT DELETE THIS LINE)*****\n",
     "\n",
     "                    # Assign the patch from the last input\n",
     "                    patch = self.last_input[:, tmp_y:tmp_y + self.size, tmp_x:tmp_x + self.size]\n",
@@ -623,6 +631,7 @@
     "                    # Compute the loss gradient of the input (dL/dX)\n",
     "                    dout[:, tmp_y:tmp_y + self.size, tmp_x:tmp_x + self.size] += \\\n",
     "                        self.filters[f] * din[f, out_y, out_x]\n",
+    "                    # *****END OF YOUR CODE (DO NOT DELETE THIS LINE)***** \n",
     "                    tmp_x += self.stride\n",
     "                    out_x += 1\n",
     "                tmp_y += self.stride\n",
@@ -774,4 +783,3 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
-
